testsuite/tests/mdo/should_fail/mdofail005.stderr

mdofail005.hs:11:14: error:
    parse error on input ‘<-’
    Suggested fix: Perhaps you intended to use RecursiveDo
